PLUGINWIZARD-88 : Wording improvements
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@65920 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -235,8 +235,8 @@ pluginwizard_plugin_recapitulate.buttonBack=Go Back
 pluginwizard_plugin_recapitulate.labelSummary=Plugin Attributes
 pluginwizard_plugin_recapitulate.labelXPages=XPages
 pluginwizard_plugin_recapitulate.labelPortlets=Portlets
-pluginwizard_plugin_recapitulate.labelRests=Associate to REST
-pluginwizard_plugin_recapitulate.labelRest=Associates to REST
+pluginwizard_plugin_recapitulate.labelRests=APIs REST for several business classes
+pluginwizard_plugin_recapitulate.labelRest=API REST for a business classes
 pluginwizard_plugin_recapitulate.labelAdminFeatures=Admin Features
 pluginwizard_plugin_recapitulate.labelBusinessClasses=Business Classes
 pluginwizard_plugin_recapitulate.buttonGenerate=Generate the zip
@@ -306,11 +306,11 @@ pluginwizard_modify_portlet_feature.pageTitle=Modify portlet feature
 ###############################################################################
 #pluginwizard_manage_plugin_rest.html
 
-pluginwizard_manage_plugin_rest.pageTitle=Manage Business classes used REST
+pluginwizard_manage_plugin_rest.pageTitle=Create an API of REST Web Services to manage business classes
 pluginwizard_manage_plugin_rest.labelBusinessClass=Business classes
 pluginwizard_manage_plugin_rest.buttonBack=Previous Step
 pluginwizard_manage_plugin_rest.buttonNext=Next Step
-pluginwizard_manage_plugin_rest.pageHelp=REST is a web services architecture which allows to exchange web data.
+pluginwizard_manage_plugin_rest.pageHelp=REST Web Services provide access to a resource (typically a business object) via HTTP and retrieve information in XML or JSON format. The API provides functions to read, create, modify, delete and list.
 
 ###############################################################################
 #pluginwizard_create_plugin_description.html
