PLUGINWIZARD-93 : Id and description improvement : description is deleted and id is auto + correction of a lot of bugs

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -487,6 +487,10 @@ pluginwizard_modify_business_class.buttonModifyAttribute=Modify attribute
 pluginwizard_modify_business_class.buttonRemoveAttribute=Delete attribute
 pluginwizard_modify_business_class.buttonModifyClass=Modify class
 
+pluginwizard_modify_business_class.labelId=id
+pluginwizard_modify_business_class.labelPrimaryKey=Primary Key
+pluginwizard_modify_business_class.labelAuto=Auto increment
+
 pluginwizard_modify_business_class.labelNotNull=Mandatory
 pluginwizard_modify_business_class.labelMaxLength=Max Length
 pluginwizard_modify_business_class.labelAttributeKey=Key
