--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>plugin-pluginwizard</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>4.0.1-SNAPSHOT</version>
+    <version>4.1.0</version>
     <name>Lutece pluginwizard plugin</name>
 
     <repositories>
@@ -60,6 +60,7 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-dev-plugin-pluginwizard.git </connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-dev-plugin-pluginwizard.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-dev-plugin-pluginwizard.git</url>
-    </scm>
+      <tag>lutece-dev-plugin-pluginwizard-4.1.0</tag>
+  </scm>
 
 </project>
