Fix the accents in the ressources generated

--- a/webapp/WEB-INF/conf/plugins/pluginwizard.properties
+++ b/webapp/WEB-INF/conf/plugins/pluginwizard.properties
@@ -1,13 +1,12 @@
 ################################################################################
 # Configuration file for Wizard plugin
 
-
 pluginwizard.label.title.manage.fr=Liste des {0}s
-pluginwizard.label.title.create.fr=Cr\u00e9ation d''un {0}
+pluginwizard.label.title.create.fr=Cr\\u00e9ation d''un {0}
 pluginwizard.label.title.modify.fr=Modification d''un {0}
 pluginwizard.label.buttonAdd.fr=Ajouter un {0}
-pluginwizard.label.validation.notEmpty.fr=Le champ {0} ne doit pas \u00eatre vide. Veuillez le remplir SVP.
-pluginwizard.label.validation.size.fr=Le champ {0} ne doit pas contenir plus de {1} carat\u00e8res.
+pluginwizard.label.validation.notEmpty.fr=Le champ {0} ne doit pas \\u00eatre vide. Veuillez le remplir SVP.
+pluginwizard.label.validation.size.fr=Le champ {0} ne doit pas contenir plus de {1} caract\\u00e8res.
 pluginwizard.label.confirmRemove.fr=Etes vous sur de vouloir supprimer ce {0} ?
 
 pluginwizard.label.title.manage.en=list of {0}s
@@ -15,8 +14,8 @@ pluginwizard.label.title.create.en=Create a {0}
 pluginwizard.label.title.modify.en=Modify a {0}
 pluginwizard.label.buttonAdd.en=Add a {0}
 pluginwizard.label.validation.notEmpty.en=The field {0} cannot be empty. Please fill it.
-pluginwizard.label.validation.size.en=The field {0} cannot accept more than {1} charaters.
-pluginwizard.label.confirmRemove.en=Are you sure you want to delete this {0}?
+pluginwizard.label.validation.size.en=The field {0} cannot accept more than {1} characters.
+pluginwizard.label.confirmRemove.en=Are you sure that you want to delete this {0}?
 
 pluginwizard.models.files.path=/WEB-INF/templates/skin/plugins/pluginwizard/models/
 
@@ -29,8 +28,6 @@ pluginwizard.listResources.itemsPerPage=20
 # Field verification
 
 pluginwizard.regex.do_create_plugin.plugin_name=^[a-z]+$
-
-
 
 pluginwizard.regex.do_modify_plugin.plugin_id=
 pluginwizard.regex.do_modify_plugin.plugin_changes=
@@ -47,10 +44,8 @@ pluginwizard.regex.do_modify_plugin.plugin_provider_url=^http\://[a-zA-Z0-9\-\.]
 pluginwizard.regex.do_modify_plugin.plugin_user_guide=
 pluginwizard.regex.do_modify_plugin.plugin_version=
 
-
 ################################################################################
 # do_create_portlet field verification
 # Any word made of capital letters with at least caracter and ending with _PORTLET
 pluginwizard.regex.do_create_portlet.portlet_type_name=([A-Z])+_PORTLET
 pluginwizard.regex.do_modify_portlet.portlet_type_name=([A-Z])+_PORTLET
-
