Improve load/save model.json
Ability to :
load a plugin (model) from a json file
save a plugin (model) into a json file

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -13,7 +13,9 @@ adminFeature.pluginwizard_management.description=Manage PluginWizard configurati
 
 ###############################################################################
 #pluginwizard_create_plugin.html
-pluginwizard_create_plugin.pageTitle=Create a plugin
+pluginwizard_create_plugin.pageTitle=Plugin Wizard
+pluginwizard_create_plugin.createPlugin=Create or modify a plugin
+pluginwizard_create_plugin.loadPlugin=Load the configuration of a plugin
 pluginwizard_create_plugin.labelPluginName=Create a plugin
 pluginwizard_create_plugin.labelPluginNameHelp=Low caps and characters included in [a..z]
 pluginwizard_create_plugin.helpPluginName=The name of the plugin
@@ -244,6 +246,7 @@ pluginwizard_plugin_recapitulate.labelPluginName=Plugin's name
 pluginwizard_plugin_recapitulate.pageHelp=The plugin is ready to be generated. A summary of its content is displayed.The button 'Generate the zip' allows creating the archive. The button 'Go Back' will point towards the previous steps in order if ever modifications were needed.
 pluginwizard_plugin_recapitulate.alertProperties=<h4>Caution ! </h4>before first run, you have to finalize text resources in different languages.<br>Files are located in /src/java/fr/paris/lutece/plugins/<i>myplugin</i>/resources/.
 pluginwizard_plugin_recapitulate.labelScheme=Generation scheme
+pluginwizard_plugin_recapitulate.buttonGenerateJson=Download scheme (JSON)
 
 
 
@@ -638,8 +641,7 @@ modify_configurationkey.rowKey_value=rowKey_value
 modify_configurationkey.buttonValidate=buttonValidate
 message.confirmRemoveConfigurationkey=confirmRemoveConfigurationkey
 
-
-
+error.plugin.file=Un fichier json doit \u00eatre renseign\u00e9.
 
 
 
