change save plugin ressource

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -246,7 +246,7 @@ pluginwizard_plugin_recapitulate.labelPluginName=Plugin's name
 pluginwizard_plugin_recapitulate.pageHelp=The plugin is ready to be generated. A summary of its content is displayed.The button 'Generate the zip' allows creating the archive. The button 'Go Back' will point towards the previous steps in order if ever modifications were needed.
 pluginwizard_plugin_recapitulate.alertProperties=<h4>Caution ! </h4>before first run, you have to finalize text resources in different languages.<br>Files are located in /src/java/fr/paris/lutece/plugins/<i>myplugin</i>/resources/.
 pluginwizard_plugin_recapitulate.labelScheme=Generation scheme
-pluginwizard_plugin_recapitulate.buttonGenerateJson=Download scheme (JSON)
+pluginwizard_plugin_recapitulate.buttonGenerateJson=Save scheme (JSON)
 
 
 
