--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -16,6 +16,8 @@ adminFeature.pluginwizard_management.description=Manage PluginWizard configurati
 pluginwizard_create_plugin.pageTitle=Plugin Wizard
 pluginwizard_create_plugin.createPlugin=Create or modify a plugin
 pluginwizard_create_plugin.loadPlugin=Load the configuration of a plugin
+pluginwizard_create_plugin.labelPluginLoad=JSON file
+pluginwizard_create_plugin.buttonLoadPlugin=Load
 pluginwizard_create_plugin.labelPluginName=Create a plugin
 pluginwizard_create_plugin.labelPluginNameHelp=Low caps and characters included in [a..z]
 pluginwizard_create_plugin.helpPluginName=The name of the plugin
