PLUGINWIZARD-103 complete missing labels

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -521,7 +521,7 @@ pluginwizard_modify_pluginlabelBusinessStep=Business Class
 pluginwizard_modify_pluginlabelXPageStep=XPage
 pluginwizard_modify_pluginlabelPortletsStep=Portlets
 pluginwizard_modify_pluginlabelI18n=i18n
-pluginwizard_modify_pluginlabelGenerateStep=G\u00e9n\u00e9ration
+pluginwizard_modify_pluginlabelGenerateStep=Generation
 
 pluginwizard_create_application.labelCreationStep=Create
 pluginwizard_create_application.labelDescriptionStep=Describe
@@ -616,8 +616,8 @@ pluginwizard_manage_resource_keys.labelGenerateStep=Download
 #######################Configuration Back Office
 adminFeature.pluginwizard_management.name=Management of the PluginWizard configuration keys
 adminFeature.pluginwizard_management.description=Allows to specify up to date configuration parameters
-manage_pluginwizards.tableLabel=tableLabel
-manage_pluginwizards.labelManagement=labelManagement
+manage_pluginwizards.tableLabel=PluginWizard
+manage_pluginwizards.labelManagement=PluginWizard management
 manage_configurationkeys.pageTitle=pageTitle
 manage_configurationkeys.tableLabel=tableLabel
 manage_configurationkeys.columnId_key=columnId_key
@@ -627,7 +627,7 @@ manage_configurationkeys.buttonAddConfigurationkey=buttonAddConfigurationkey
 manage_configurationkeys.actionDelete=actionDelete
 manage_configurationkeys.actionModify=actionModify
 
-create_configurationkey.pageTitle=pageTitle
+create_configurationkey.pageTitle=Configuration
 create_configurationkey.tableLabel=tableLabel
 create_configurationkey.rowId_key=rowId_key
 create_configurationkey.rowKey_description=rowKey_description
@@ -638,7 +638,7 @@ modify_configurationkey.tableLabel=tableLabel
 modify_configurationkey.rowId_key=rowId_key
 modify_configurationkey.rowKey_description=rowKey_description
 modify_configurationkey.rowKey_value=rowKey_value
-modify_configurationkey.buttonValidate=buttonValidate
+modify_configurationkey.buttonValidate=OK
 message.confirmRemoveConfigurationkey=confirmRemoveConfigurationkey
 
 error.plugin.file=Un fichier json doit \u00eatre renseign\u00e9.
@@ -646,3 +646,83 @@ error.plugin.file=Un fichier json doit \u00eatre renseign\u00e9.
 
 
 
+pluginwizard_plugin_recapitulate.labelPortlet=Portlet
+info.portlet.updated=The admin portlet is updated
+info.feature.created=The admin feature is created
+error.feature.description.notEmpty=The description is mandatory
+info.businessClass.created=The business class is created
+modify_configurationkey.rowTitleConfigurationDescription=Key
+error.plugin.urlProvider.url=The provider URL is not valid
+info.pluginCreated=Plugin created
+info.sessionExpired=Session expired
+pluginwizard_modify_business_class.labelModifyttribute=Modify an attribute
+error.attribute.tablePrefix=The prefix of the table name must be : <plugin_name>_
+error.plugin.version.notEmpty=The version is mandatory
+error.businessClass.tableName.notEmpty=the table name is mandatory
+error.feature.description.size=The description must be a string of 10->255 characters
+error.businessClass.tableName.pattern=The table name must be in lowercase (underscores allowed)
+error.application.class.notEmpty=The class name is mandatory
+error.portlet.type.pattern=The type must be in uppercase and must end by "_PORTLET"
+error.plugin.provider.size=The provider name must be a string of 3->255 characters
+error.plugin.provider.notEmpty=The provider name is mandatory
+error.feature.right.notEmpty=The Right field is mandatory
+error.portlet.jspBaseName.notEmpty=the JSP base name is mandatory
+create_configurationkey.rowTitleConfigurationDescription=Key
+info.attribute.created=Attribute created
+error.businessClass.class.notEmpty=The class name is mandatory
+manage_configurationkey.buttonItemsPerPage=Number of items per page
+error.plugin.copyright.notEmpty=The copyright is mandatory
+manage_configurationkey.columnKey_value=Value
+info.dataReset=The plugin informations are reset
+error.module.name.pattern=The module name must be in lowercase without spaces : <pluginname>-<modulename>
+info.application.updated=XPage updated
+pluginwizard_plugin_recapitulate.labelBusinessClasse=Business class
+error.attribute.name.notEmpty=The attribute name is mandatory
+info.attribute.deleted=the attribute is deleted
+manage_configurationkey.columnKey_description=Key
+error.plugin.version.pattern=The version format must be : 'N.N.N'
+pluginwizard_modify_admin_feature.labelBusinessClass=Business class
+pluginwizard_plugin_recapitulate.labelAdminFeature=Admin feature
+pluginwizard_create_plugin.pageHelp=This wizard will let you create your plugin step by step and deliver the resulting lutece code.
+error.attribute.primaryType=The primary key type must be numeric
+error.application.class.pattern=The class name must start with a capital letter and contain only letters
+modify_configurationkey.rowTitleConfigurationValue=Value
+error.portlet.class.pattern=The class name must end with '_PORTLET' and contain only letters
+error.plugin.description.notEmpty=the description is mandatory
+error.attribute.name.pattern=The attribute name must be in lowercase
+pluginwizard_plugin_recapitulate.labelXPage=XPage label
+error.plugin.description.size=The description must be a string between 5 and 255 characters
+manage_configurationkey.buttonAddConfigurationKey=Add a key
+info.feature.deleted=Admin feature deleted
+error.businessClass.class.pattern=The class name must start with a capital letter and contain only letters
+error.feature.right.pattern=The 'Right' field must be in uppercase (underscores allowed)
+modify_configurationkey.buttonModifyConfigurationKey=Modify the Key
+error.feature.name.notEmpty=The feature name is mandatory
+error.application.name.pattern=The application name is mandatory
+info.businessClass.deleted=Business class deleted
+pluginwizard_manage_plugin_admin_features.helpFeatureManagement=This attribute must be uppercase
+error.application.name.notEmpty=The application name is mandatory
+create_configurationkey.rowTitleConfigurationKey=Id
+error.plugin.urlProvider.notEmpty=The provider URL is mandatory
+info.businessClass.updated=Business class created
+manage_configurationkey.columnKey_action=Action
+error.plugin.name.notEmpty=The plugin name is mandatory
+info.portlet.deleted=The portlet is deleted
+error.feature.name.pattern=The feature name must start with a capital letter and contain only letters
+pluginwizard_manage_plugin_admin_features.labelFeatureUrl=URL
+pluginwizard_create_plugin.create_plugin.pageTitle=Create a lutece plugin
+error.portlet.jspBaseName.pattern=The JSP base name must start with 'Portlet' and contain only alphanumeric characters
+modify_configurationkey.rowTitleConfigurationKey=Id
+error.attribute.descriptionType=The description should not be numeric
+info.portlet.created=Portlet added
+create_configurationkey.rowTitleConfigurationValue=Value
+info.application.deleted=Xpage deleted
+info.application.created=Xpage added
+error.portlet.type.notEmpty=Type is mandatory
+info.feature.updated=Admin feature updated
+error.feature.title.size=The title must be a string between 10 and 80 characters
+error.feature.title.notEmpty=The title is mandatory
+error.plugin.name.pattern=Plugin name must be in lowercase without spaces or other specific characters
+error.portlet.class.notEmpty=Business class name is mandatory
+info.attribute.updated=Attributes updated
+manage_configurationkey.labelItemsPerPage=Number of items per page
