PLUGINWIZARD-115 add back button label property

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -249,7 +249,7 @@ pluginwizard_plugin_recapitulate.pageHelp=The plugin is ready to be generated. A
 pluginwizard_plugin_recapitulate.alertProperties=<h4>Caution ! </h4>before first run, you have to finalize text resources in different languages.<br>Files are located in /src/java/fr/paris/lutece/plugins/<i>myplugin</i>/resources/.
 pluginwizard_plugin_recapitulate.labelScheme=Generation scheme
 pluginwizard_plugin_recapitulate.buttonGenerateJson=Save scheme (JSON)
-
+pluginwizard_plugin_recapitulate.home=Back to Home
 
 
 ###############################################################################
