--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <artifactId>lutece-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
-        <version>3.0.11</version>
+        <version>4.0.3</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>plugin-pluginwizard</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>6.0.0-SNAPSHOT</version>
+    <version>[6.0.0-SNAPSHOT,)</version>
     <name>Lutece pluginwizard plugin</name>
 
     <repositories>
