--- a/webapp/WEB-INF/conf/plugins/pluginwizard.properties
+++ b/webapp/WEB-INF/conf/plugins/pluginwizard.properties
@@ -9,13 +9,13 @@ pluginwizard.label.validation.notEmpty.fr=Le champ {0} ne doit pas \\u00eatre vi
 pluginwizard.label.validation.size.fr=Le champ {0} ne doit pas contenir plus de {1} caract\\u00e8res.
 pluginwizard.label.confirmRemove.fr=Etes vous sur de vouloir supprimer ce {0} ?
 
-pluginwizard.label.title.manage.en=list of {0}s
-pluginwizard.label.title.create.en=Create a {0}
-pluginwizard.label.title.modify.en=Modify a {0}
-pluginwizard.label.buttonAdd.en=Add a {0}
-pluginwizard.label.validation.notEmpty.en=The field {0} cannot be empty. Please fill it.
-pluginwizard.label.validation.size.en=The field {0} cannot accept more than {1} characters.
-pluginwizard.label.confirmRemove.en=Are you sure that you want to delete this {0}?
+pluginwizard.label.title.manage.=list of {0}s
+pluginwizard.label.title.create.=Create a {0}
+pluginwizard.label.title.modify.=Modify a {0}
+pluginwizard.label.buttonAdd.=Add a {0}
+pluginwizard.label.validation.notEmpty.=The field {0} cannot be empty. Please fill it.
+pluginwizard.label.validation.size.=The field {0} cannot accept more than {1} characters.
+pluginwizard.label.confirmRemove.=Are you sure that you want to delete this {0}?
 
 pluginwizard.models.files.path=/WEB-INF/templates/skin/plugins/pluginwizard/models/
 
