--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -1,6 +1,6 @@
 # Wizard messages properties file
 
-plugin.description=Wizard to generate plugins for Lutece
+plugin.description=Wizard to generate plugins for Lutece in Java or Kotlin
 plugin.provider=City of Paris
 
 ################################################################################
@@ -25,7 +25,7 @@ pluginwizard_create_plugin.labelSummary=The wizard will generate the following c
 pluginwizard_create_plugin.buttonCreatePlugin=Continue
 pluginwizard_create_plugin.labelAddBusinessClasses=Business layer classes
 pluginwizard_create_plugin.labelAddSqlFiles=The SQL init files
-pluginwizard_create_plugin.labelAddJspBean=The Java classes for presentation layer
+pluginwizard_create_plugin.labelAddJspBean=The Java or Kotlin classes for presentation layer
 pluginwizard_create_plugin.labelAddBackOfficeTemplate=The HTML template files
 pluginwizard_create_plugin.labelAddResourceFiles=Internationalisation resource files
 pluginwizard_create_plugin.labelAddBackOfficeJsp=The Jsp for management interface
@@ -78,7 +78,7 @@ pluginwizard_modify_plugin.buttonModifyPlugin=Modify
 pluginwizard_modify_plugin.labelSummary=The wizard will generate the following components
 pluginwizard_modify_plugin.labelAddBusinessClasses=Business layer classes
 pluginwizard_modify_plugin.labelAddSqlFiles=The SQL init files
-pluginwizard_modify_plugin.labelAddJspBean=The Java classes for presentation layer
+pluginwizard_modify_plugin.labelAddJspBean=The Java or Kotlin classes for presentation layer
 pluginwizard_modify_plugin.labelAddBackOfficeTemplate=The HTML template files
 pluginwizard_modify_plugin.labelAddResourceFiles=Internationalisation resource files
 pluginwizard_modify_plugin.labelAddBackOfficeJsp=The Jsp for management interface
@@ -350,7 +350,7 @@ pluginwizard_create_plugin_description.helpPluginProvider=Plugin Provider
 pluginwizard_create_plugin_description.helpPluginProviderUrl=Provider Url
 pluginwizard_create_plugin_description.helpPlugindbPoolRequired=Database Pool Required
 
-pluginwizard_create_plugin_description.pageHelp=The specified elements will help in configuring the project structure of the Lutece plugin.The class of athe plugin is a Java class. The use of a pool by the database can be added by "Database Pool Used"
+pluginwizard_create_plugin_description.pageHelp=The specified elements will help in configuring the project structure of the Lutece plugin.The class of the plugin is a Java or Kotlin class. The use of a pool by the database can be added by "Database Pool Used"
 
 
 ###############################################################################
@@ -373,7 +373,7 @@ pluginwizard_modify_plugin_description.labelTrue=True
 pluginwizard_modify_plugin_description.labelFalse=False
 pluginwizard_modify_plugin_description.buttonBack=Previous Step
 pluginwizard_modify_plugin_description.buttonNext=Next Step
-pluginwizard_modify_plugin_description.pageHelp=The specified elements will help in configuring the project structure of the Lutece plugin.The class of athe plugin is a Java class. The use of a pool by the database can be added by "Database Pool Used"
+pluginwizard_modify_plugin_description.pageHelp=The specified elements will help in configuring the project structure of the Lutece plugin.The class of the plugin is a Java or Kotlin class. The use of a pool by the database can be added by "Database Pool Used"
 
 
 pluginwizard_create_plugin_description.buttonBack=Previous Step
