PLUGINWIZARD-126 : translation for label in properties files

--- a/webapp/WEB-INF/conf/plugins/pluginwizard.properties
+++ b/webapp/WEB-INF/conf/plugins/pluginwizard.properties
@@ -8,6 +8,10 @@ pluginwizard.label.buttonAdd.fr=Ajouter un {0}
 pluginwizard.label.validation.notEmpty.fr=Le champ {0} ne doit pas \\u00eatre vide. Veuillez le remplir SVP.
 pluginwizard.label.validation.size.fr=Le champ {0} ne doit pas contenir plus de {1} caract\\u00e8res.
 pluginwizard.label.confirmRemove.fr=Etes vous sur de vouloir supprimer ce {0} ?
+pluginwizard.label.infoKey.created.fr=cr\\u00e9\\u00e9
+pluginwizard.label.infoKey.updated.fr=modifi\\u00e9
+pluginwizard.label.infoKey.removed.fr=supprim\\u00e9
+pluginwizard.label.helpText.fr=texte d''aide
 
 pluginwizard.label.title.manage.=list of {0}s
 pluginwizard.label.title.create.=Create a {0}
@@ -16,7 +20,11 @@ pluginwizard.label.buttonAdd.=Add a {0}
 pluginwizard.label.validation.notEmpty.=The field {0} cannot be empty. Please fill it.
 pluginwizard.label.validation.size.=The field {0} cannot accept more than {1} characters.
 pluginwizard.label.confirmRemove.=Are you sure that you want to delete this {0}?
-
+pluginwizard.label.infoKey.created.=created
+pluginwizard.label.infoKey.updated.=updated
+pluginwizard.label.infoKey.removed.=removed
+pluginwizard.label.helpText.=help text
+	
 pluginwizard.models.files.path=/WEB-INF/templates/skin/plugins/pluginwizard/models/
 
 ################################################################################
