PLUGINWIZARD-138 : Internationalization of business class attributes types

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -69,6 +69,17 @@ pluginwizard_modify_attribute.labelClassDescription=Description
 pluginwizard_modify_attribute.pageHelp=The attributes of the Pojo class are in small letters with an underscore in between the different words representing the attribute (e.g id_person is a field which is a column in the SQL table that would be generated). The type of the attribute can be chosen in the dropdown box. The button 'Modify an attribute' allows modifying the attribute.
 
 ###############################################################################
+# attributes types
+pluginwizard_attributes_types.1.description=Integer
+pluginwizard_attributes_types.2.description=Short text (50 characters)
+pluginwizard_attributes_types.3.description=Medium text (255 characters)
+pluginwizard_attributes_types.4.description=Long text  ( &gt; 255 characters)
+pluginwizard_attributes_types.5.description=Email (255 characters)
+pluginwizard_attributes_types.6.description=URL (255 characters)
+pluginwizard_attributes_types.7.description=Date
+pluginwizard_attributes_types.8.description=Boolean
+
+###############################################################################
 #pluginwizard_modify_plugin.html
 pluginwizard_modify_plugin.pageTitle=Modify a plugin
 pluginwizard_modify_plugin.labelPluginName=Modify a plugin
