PLUGINWIZARD-139 : Use a property to activate duplicate plugin name control

--- a/webapp/WEB-INF/conf/plugins/pluginwizard.properties
+++ b/webapp/WEB-INF/conf/plugins/pluginwizard.properties
@@ -29,6 +29,7 @@ pluginwizard.models.files.path=/WEB-INF/templates/skin/plugins/pluginwizard/mode
 
 ################################################################################
 # Configuration file for Plugin pluginwizard
+pluginwizard.searchDuplicates=false
 pluginwizard.itemsPerPage = 20
 pluginwizard.listResources.itemsPerPage=20
 
