PLUGINWIZARD-140 : Small UI improvements

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -14,7 +14,7 @@ pagePathLabel=Plugin generation wizard
 #pluginwizard_create_plugin.html
 pluginwizard_create_plugin.pageTitle=Plugin Wizard
 pluginwizard_create_plugin.createPlugin=Create or modify a plugin
-pluginwizard_create_plugin.loadPlugin=Load the configuration of a plugin
+pluginwizard_create_plugin.loadPlugin=Reload a previously saved generation scheme
 pluginwizard_create_plugin.labelPluginLoad=JSON file
 pluginwizard_create_plugin.buttonLoadPlugin=Load
 pluginwizard_create_plugin.labelPluginName=Create a plugin
@@ -323,9 +323,12 @@ pluginwizard_create_plugin_description.labelPluginChanges=Plugin Changes
 pluginwizard_create_plugin_description.labelPluginUserGuide=Plugin User Guide
 pluginwizard_create_plugin_description.labelPluginVersion=Plugin Version
 pluginwizard_create_plugin_description.labelPluginCopyright=Plugin Copyright
+pluginwizard_create_plugin_description.placeholderPluginCopyright=Copyright (c) 2020 your company
 pluginwizard_create_plugin_description.labelPluginIconUrl=Plugin Icon Url
 pluginwizard_create_plugin_description.labelPluginProvider=Plugin Provider
+pluginwizard_create_plugin_description.placeholderPluginProvider=Your Company
 pluginwizard_create_plugin_description.labelPluginProviderUrl=Provider Url
+pluginwizard_create_plugin_description.placeholderPluginProviderUrl=http://www.yourcompany.com
 pluginwizard_create_plugin_description.labelPlugindbPoolRequired=Database Pool Required
 pluginwizard_create_plugin_description.labelElementsToGenerate=Elements to generate
 pluginwizard_create_plugin_description.helpPluginName=Plugin Name
@@ -651,7 +654,7 @@ info.sessionExpired=Session expired
 pluginwizard_modify_business_class.labelModifyttribute=Modify an attribute
 error.attribute.tablePrefix=The prefix of the table name must be : <plugin_name>_
 error.plugin.version.notEmpty=The version is mandatory
-error.businessClass.tableName.notEmpty=the table name is mandatory
+error.businessClass.tableName.notEmpty=The table name is mandatory
 error.feature.description.size=The description must be a string of 10->255 characters
 error.businessClass.tableName.pattern=The table name must be in lowercase (underscores allowed)
 error.application.class.notEmpty=The class name is mandatory
@@ -671,7 +674,7 @@ error.module.name.pattern=The module name must be in lowercase without spaces : 
 info.application.updated=XPage updated
 pluginwizard_plugin_recapitulate.labelBusinessClasse=Business class
 error.attribute.name.notEmpty=The attribute name is mandatory
-info.attribute.deleted=the attribute is deleted
+info.attribute.deleted=The attribute is deleted
 manage_configurationkey.columnKey_description=Key
 error.plugin.version.pattern=The version format must be : 'N.N.N'
 pluginwizard_modify_admin_feature.labelBusinessClass=Business class
@@ -681,7 +684,7 @@ error.attribute.primaryType=The primary key type must be numeric
 error.application.class.pattern=The class name must start with a capital letter and contain only letters
 modify_configurationkey.rowTitleConfigurationValue=Value
 error.portlet.class.pattern=The class name must end with '_PORTLET' and contain only letters
-error.plugin.description.notEmpty=the description is mandatory
+error.plugin.description.notEmpty=The description is mandatory
 error.attribute.name.pattern=The attribute name must be in lowercase
 pluginwizard_plugin_recapitulate.labelXPage=XPage label
 error.plugin.description.size=The description must be a string between 5 and 255 characters
