--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,19 @@
             <version>[6.2.1-SNAPSHOT,)</version>
             <type>lutece-core</type>
         </dependency>
+        <!-- API, java.xml.bind module for JDK 9 and above -->
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
+        <!-- Runtime, com.sun.xml.bind module for JDK 9 and above -->
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -50,7 +63,7 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-dev-plugin-pluginwizard.git </connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-dev-plugin-pluginwizard.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-dev-plugin-pluginwizard.git</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
 </project>
