PLUGINWIZARD-143 forms helps added

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -637,6 +637,23 @@ modify_configurationkey.rowKey_value=rowKey_value
 modify_configurationkey.buttonValidate=OK
 message.confirmRemoveConfigurationkey=confirmRemoveConfigurationkey
 
+###########Form help
+pluginwizard_business_class.help=Starts with capital letter and only contains alphabetic letters.
+pluginwizard_business_class_table.help=Starts with the plugin name followed by "_". Only lowercase.
+pluginwizard_plugin_description.help=The description must be a string of 10->255 characters.
+pluginwizard_plugin_provider.help=The provider name must be a string of 3->255 characters.
+pluginwizard_plugin_version.help=The version format must be : 'N.N.N'.
+pluginwizard_plugin_copyright.help=Field required.
+pluginwizard_plugin_provider_url.help=the URL must begin by http/https.
+pluginwizard_admin_feature_title.help=The title must be a string of 10->80 characters.
+pluginwizard_admin_feature_description.help=The description must be a string of 10->255 characters.
+pluginwizard_admin_feature_name.help=The feature name must start with a capital letter and contain only letters.
+pluginwizard_application_name.help=The application name must be a lowercase string.
+pluginwizard_application_class.help=The class name must start with a capital letter and contain only letters.
+pluginwizard_portlet_class.help= The class name must end with '_PORTLET' and contain only letters.
+pluginwizard_portlet_type_name.help=The type must be in uppercase and must end by "_PORTLET".
+pluginwizard_jsp_base_name.help=The type must start by 'Portlet' and only contain alphabetic letters. 
+
 error.plugin.file=Un fichier json doit \u00eatre renseign\u00e9.
 
 
@@ -694,7 +711,7 @@ error.businessClass.class.pattern=The class name must start with a capital lette
 error.feature.right.pattern=The 'Right' field must be in uppercase (underscores allowed)
 modify_configurationkey.buttonModifyConfigurationKey=Modify the Key
 error.feature.name.notEmpty=The feature name is mandatory
-error.application.name.pattern=The application name is mandatory
+error.application.name.pattern=The application name must be a lowercase string
 info.businessClass.deleted=Business class deleted
 pluginwizard_manage_plugin_admin_features.helpFeatureManagement=This attribute must be uppercase
 error.application.name.notEmpty=The application name is mandatory
