--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>lutece-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
-        <version>5.1.0</version>
+        <version>5.1.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[6.2.1-SNAPSHOT,)</version>
+            <version>[7.0.0-RC-03,)</version>
             <type>lutece-core</type>
         </dependency>
         <!-- API, java.xml.bind module for JDK 9 and above -->
